--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ h1{
 p{
     font-size: 50px;
     text-align: center;
+    margin-top:30px;
     
     
     font-family: Larsseit-Bold,sans-serif;
